--- a/index.html
+++ b/index.html
@@ -506,45 +506,46 @@
                 "A 30-seconds plank, for you, on video call today."
             ],
             "Emotional Health🟢": [
-                "Write down three things you'd want to do this year with me, virtually or not, and show them to me.",
-                "Call me up and ask me to tell you about any three things I love about your body or your being.",
-                "Tell me about your top three non-sexual fantasies with me, to be fulfilled once we start living together.",
-                "Ask me to write you a fantasy scenario of us in any setting."
+                "I will write down three things I'd want to do this year with you, virtually or not, and show them to you.",
+                "I will call you up and ask you to tell me about any three things you love about my body or my being.",
+                "I will tell you about my top three non-sexual fantasies with you, to be fulfilled once we start living together.",
+                "Can I ask you to write me a fantasy scenario of us in any setting?"
             ],
             "Mental Health🟢": [
-                "Write this on a paper: 'There are always going to be people better and worse than me, and that is okay. I am content.' Send me a photo of the paper.",
-                "Call me up and compliment yourself on something that you did in the recent past that you're really proud of for having done.",
-                "Wake up tomorrow morning, call me, and tell me, 'I am confident that this is going to be a good day for me. I love you.'"
+                "I will write this on a paper: 'There are always going to be people better and worse than me, and that is okay. I am content.' I shall send you a photo of the paper.",
+                "I shall call you up and compliment myself on something that I did in the recent past that I am really proud of for having done.",
+                "As soon as I wake up tomorrow morning, I will call you, and tell you, 'I am confident that this is going to be a good day for me. I love you.'",
+                "Before going to bed today, I'll call you up and wish you a good night, and remember to collect an ILY from you."
             ],
             "Studies🟢": [
-                "Keep up with your Finance Course from IISER Pune. This is a recurring task till I conclude that you need not study it any more.",
-                "Explain the causes, effects, and results of the Great Recession to me on a phone call.",
-                "Keep revising regression analysis, statistical inference and testing of hypotheses, and distributions. This is a recurring task till I conclude that you need not study it any more."
+                "I am going to keep up with my Finance Course from IISER Pune. This is a recurring task till you decide that I need not study it any more.",
+                "I will explain the causes, effects, and results of the Great Recession to you on a phone call.",
+                "I shall keep revising regression analysis, statistical inference and testing of hypotheses, and distributions. This is a recurring task till you decide that I need not study it any more."
             ],
             "Skills🟢🟠": [
-                "Write me a 500-word essay on an introduction of yourself.",
-                "Schedule an interview with me, either one where you remain clothed throughout, or one where you start out clothed and keep losing garments for every mistake you make.",
-                "Enroll yourself in a MicroMasters course or its equivalent, after suitably consulting me."
+                "I will write you a 500-word essay on an introduction of myself.",
+                "I am going to schedule an interview with you, either one where I remain clothed throughout, or one where I start out clothed and keep losing garments for every mistake I make.",
+                "After suitably consulting me, I shall enroll myself in a MicroMasters course or its equivalent."
             ],
             "Capabilities🟢🟠": [
-                "Do a hundred jumping jacks for better breathing and lung capacity, while keeping me on video call. You may or may not be naked, depending on whether you're free and whether or not I want you to be naked.",
-                "Write a 500-word essay on how you picture a day in your life at college during Masters, by hand in a copy, and make me a PDF of it.",
-                "Perform 10 time-controlled squats with me on video call. I shall do the controlling of the time. You may or may not be naked, depending on whether you're free and whether or not I want you to be naked."
+                "I will be doing a hundred jumping jacks for better breathing and lung capacity, while keeping you on video call. I may or may not be naked, depending on whether I am free and whether or not you want me to be naked.",
+                "I am going to write a 500-word essay on how I picture a day in my life at college during Masters, by hand in a copy, and send you a PDF of it.",
+                "I'll perform 10 time-controlled squats with you on video call. Please do the controlling of the time for me. I may or may not be naked, depending on whether I am free and whether or not you want me to be naked."
             ],
             "Physical Display🔴": [
-                "Present yourself to me in the most natural of your poses: fully nude, kneeling with your hair down, spectacles off, eyes lowered and hands clasped behind you. You may choose to do as much in a photo, video, or on a video call.",
-                "Present yourself to me with your bra in your mouth, wearing nothing at all, feet close together and hands behind you, hair down. You must be standing upright and fully on display for me.",
-                "Present your ass to me by perfectly displaying your curves, in a photo, video, or on a video call."
+                "I will duly present myself to you in the most natural of my poses: fully nude, kneeling with my hair down, spectacles off, eyes lowered and hands clasped behind me. I am allowed to choose to do as much in a photo, video, or on a video call.",
+                "I will duly present myself to you with my bra in my mouth, wearing nothing at all, feet close together and hands behind me, hair down. I shall be standing upright and fully on display for you.",
+                "I will duly present my ass to you by perfectly displaying my curves, in a photo, video, or on a video call."
             ],
             "Verbal Gratitude🟠🔴": [
-                "Send me a voice message clearly expressing your gratitude at being my submissive. You may choose how long or short it is.",
-                "Text me once today saying, 'Sir, I just wanted to remind you that I am all yours,' but not in these exact same words.",
-                "Kneel nude, clasp your breasts with your hands, and slowly place your knees wide apart in a video, opening yourself up to me. Caption the video as 'A thank-you video for you'."
+                "I'll be sending you a voice message clearly expressing my gratitude at being your submissive. ",
+                "I shall text you once today saying, 'Sir, I just wanted to remind you that I am all yours,' but not in these exact same words.",
+                "I will use 'sir' with you throughout today, including in at least one video where I am just as clothed or naked as you want me to be."
             ],
             "Mental Conditioning🟠": [
-                "Get topless, write 'I am Arka's favourite plaything' on your stomach, and send me a video of you writing it.",
-                "Call me up some time today, and ask me for instructions for a task, and remember to thank me appropriately.",
-                "Type up a 200-word essay on why you think you should obey me every step of your being, every day in your life, and send it to me."
+                "I'll happily get topless, write 'I am Arka's favourite plaything' on your stomach, and send you a video of you writing it.",
+                "I can call you up some time today, and ask you for instructions for a task, and remember to thank you appropriately.",
+                "I will type up a 200-word essay on why I think I should obey you every step of my being, every day in my life, and send it to you."
             ]
         };
         const WEEKLY_TASKS = [
