--- a/index.html
+++ b/index.html
@@ -506,9 +506,9 @@
                 "A 30-seconds plank, for you, on video call today."
             ],
             "Emotional Health🟢": [
-                "I will write down three things I'd want to do this year with you, virtually or not, and show them to you.",
+                "I am going to find one activity we can do everyday for a week. This may be a video call, sending some picture or video regularly, playing something together everyday, or anything else at all. I can choose whether it's sexual or non-sexual in nature.",
                 "I will call you up and ask you to tell me about any three things you love about my body or my being.",
-                "I will tell you about my top three non-sexual fantasies with you, to be fulfilled once we start living together.",
+                "I am going to show you some part of my body on a video call, in a video, or in a picture, and you will have to baby me about it for two minutes straight.",
                 "Can I ask you to write me a fantasy scenario of us in any setting?"
             ],
             "Mental Health🟢": [
