--- a/index.html
+++ b/index.html
@@ -399,8 +399,8 @@
             },
             level3: {
                 "Clothing-related🟠🔴": [
-                    "I will skip on wearing panties for a week. You can check in on me any time I am free.",
-                    "I know I look hot in my pink and nude bras. I'll wear only these for the next two days: you can check in any time I am free",
+                    "I will help with your Blender mango-milkshake project for me. Ask me exactly what you need from my end, and I'll get to work.",
+                    "I know I look hot in my pink and nude bras. I'll wear only these for the next two days: you can check in any time I am free, and you wish to check in.",
                     "For any two consecutive days of the week, I am going to be sending you videos of me changing any garment: whether it's wearing socks, putting on a towel, taking off a bra, or any other garment added to or subtracted from my body.",
                     "I am going to be showing off my wet, hot self to you three days this week by toweling down after my shower for you on camera live, or in a video. I shall end the video by either wrapping myself in said towel, or entirely nude for your delight."
                 ],
@@ -447,8 +447,8 @@
                     "I'll go out and buy stickers: the small, cutesy ones available at most stationery shops. Then, I am going to send you a nude front profile, standing upright and hands clasped behind me, with my breasts covered in at least ten stickers, but my pussy untouched and uncovered."
                 ],
                 "Special Submissive🔴": [
-                    "Maybe I'll take a simple nude of me kneeling with my hair in a single braid and in front of me, my eyes lowered, a playful smile on my lips, my hands behind me even as i thrust my chest out for you?",
-                    "I'll place a palm under each boob of mine, pushing them up with index finger and thumb and presenting them to you as they should be, while standing nude, legs close together, one foot slightly in front of the other.",
+                    "I remember how much you liked it on that one video call where I got naked for you, turned around with my palms on the wall in front of me above my head, my ass thrust you nicely for you. I'll send you two pictures of me in this pose: one with my legs wide apart, and one with them close together.",
+                    "I'll ask you to send me one of the pictures I have sent you before. I'll replicate it, but with a blindfold on for you.",
                     "I can use a handkerchief as a kind of gag over my mouth, wearing nothing but my bra as I kneel for you, hands behind me, hair down, spectacles off? I'll make sure that one strap of the bra is lowered to my shoulder, ensuring enough of my breast is on teasing display for you.",
                     "I shall stay nude on a video call with you whenever I am free, and refer to you only as 'sir' throughout the call. If I fail to uphold my sincerity in the call, you're free to ask me to do anything you wish right there on the call."
                 ]
