--- a/index.html
+++ b/index.html
@@ -520,6 +520,7 @@
             "Studies🟢": [
                 "I am going to keep up with my Finance Course from IISER Pune. This is a recurring task till you decide that I need not study it any more.",
                 "I will explain the causes, effects, and results of the Great Recession to you on a phone call.",
+                "I will explain the causes, effects, and results of the late-2000s Indian inflation scenario to you on a phone call.",
                 "I shall keep revising regression analysis, statistical inference and testing of hypotheses, and distributions. This is a recurring task till you decide that I need not study it any more."
             ],
             "Skills🟢🟠": [
