--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
             ]
         };
         const WEEKLY_TASKS = [
-            "You are to inform me at least two days in the 19-26 June week that you're wearing your black vest with no bra underneath, and I will decide what I can want to do with you then. Don't let me down. 😘"
+            "I am to send you at least three videos in the 26 June-3 July week showing you that I am studying with my pretty hair down. I am not going to let you down. 😘"
         ];
         const INTRO_TEXT = {
             title: "Welcome, babygirl.",
