--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                 "Can I ask you to write me a fantasy scenario of us in any setting?"
             ],
             "Mental Health🟢": [
-                "I will write this on a paper: 'There are always going to be people better and worse than me, and that is okay.' I shall send you a photo of the paper.",
+                "I shall call you up and compliment you on something that you did which made me happy, and tell you why it made me happy.",
                 "I shall call you up and compliment myself on something that I did in the recent past that I am really proud of for having done.",
                 "As soon as I wake up tomorrow morning, I will call you, and tell you, 'I am confident that this is going to be a good day for me. I love you.'",
                 "Before going to bed today, I'll call you up and wish you a good night, and remember to collect an ILY from you."
