--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             },
             level3: {
                 "Clothing-related🟠🔴": [
-                    "I will help with your Blender mango-milkshake project for me. Ask me exactly what you need from my end, and I'll get to work.",
+                    "I will ensure that we get to strip down together at least once this week, once you come back from work in the evening, on video call.",
                     "I know I look hot in my pink and nude bras. I'll wear only these for the next two days: you can check in any time I am free, and you wish to check in.",
                     "For any two consecutive days of the week, I am going to be sending you videos of me changing any garment: whether it's wearing socks, putting on a towel, taking off a bra, or any other garment added to or subtracted from my body.",
                     "I am going to be showing off my wet, hot self to you three days this week by toweling down after my shower for you on camera live, or in a video. I shall end the video by either wrapping myself in said towel, or entirely nude for your delight."
