--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                     "I am going to be showing off my wet, hot self to you three days this week by toweling down after my shower for you on camera live, or in a video. I shall end the video by either wrapping myself in said towel, or entirely nude for your delight."
                 ],
                 "Mind-related🟢": [
-                    "A healthy body begets a healthy mind. I will do ten push-ups with you on a video call at least three times this week.",
+                    "I am going to make it a point to not say anything negative about me for the next 24 hours.",
                     "I know I look hot with my hair down. I will send you at least three separate videos throughout the week showing you that I am studying with my hair down.",
                     "Every night this week before going to bed, I am going to tell you what I like most about myself, and I would love it if you praised me for it too.",
                     "Every night before going to bed, I am going to call you up and ask you to baby me. And then, you're going to baby me!"
