--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                 "Special Submissive🔴": [
                     "I remember how much you liked it on that one video call where I got naked for you, turned around with my palms on the wall in front of me above my head, my ass thrust you nicely for you. I'll send you two pictures of me in this pose: one with my legs wide apart, and one with them close together.",
                     "I'll ask you to send me one of the pictures I have sent you before. I'll replicate it, but with a blindfold on for you.",
-                    "I can use a handkerchief as a kind of gag over my mouth, wearing nothing but my bra as I kneel for you, hands behind me, hair down, spectacles off? I'll make sure that one strap of the bra is lowered to my shoulder, ensuring enough of my breast is on teasing display for you.",
+                    "This will be a couple of side-profile fully shaved, full nudes for you. I shall place the camera to my left, prop my head up on an arm, and stretch the full length of my legs out for you to savour every inch of me, as I turn to face you. The second nude will be in the same position but turning the other way, for you to have a look at my ass.",
                     "I shall stay nude on a video call with you whenever I am free, and refer to you only as 'sir' throughout the call. If I fail to uphold my sincerity in the call, you're free to ask me to do anything you wish right there on the call."
                 ]
             }
