--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
         function switchTab(tabName) {
             const vaultTab = document.querySelector('.tab[data-tab="vault"]');
             if (tabName === 'vault' && vaultTab.classList.contains('locked')) {
-                showFloatingOutput("The Vault is still locked. Be patient.");
+                showFloatingOutput("The Vault is still locked, cutie. Hold on.");
                 return;
             }
 
