--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
         function switchTab(tabName) {
             const vaultTab = document.querySelector('.tab[data-tab="vault"]');
             if (tabName === 'vault' && vaultTab.classList.contains('locked')) {
-                showFloatingOutput("The Vault is still locked. Be patient.");
+                showFloatingOutput("The Vault is still locked, cutiecry. Hold on ;)");
                 return;
             }
 
