--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
         // --- REAL-WORLD CONNECTION (WEATHER) ---
         function updateWeather() {
             // ❗ STEP 1: Get your free API key from openweathermap.org and paste it here.
-            const apiKey = 'YOUR_API_KEY_HERE'; 
+            const apiKey = 'bb0b89c915f6aa455fb9e567ea0438ab'; 
 
             // ❗ STEP 2: City IDs. Delhi and Kolkata are set. You can find others if needed.
             const cityDelhi = '1273294';
