--- a/index.html
+++ b/index.html
@@ -684,11 +684,11 @@
             const contentArea = document.getElementById('contentArea');
             contentArea.innerHTML = `
                 <div style="text-align: center;">
-                    <h2 class="section-header">Our Shared Soundtrack</h2>
+                    <h2 class="section-header">happy headache🍀💤</h2>
                     <p style="opacity: 0.8; max-width: 600px; margin: -20px auto 30px auto;">
-                        This is our space for music. Add songs that remind you of us, songs you love, or songs you want me to hear. This playlist belongs to both of us.
+                        This is more a feature for me than for you, because you wouldn't listen to the playlist anyway, but here it is.
                     </p>
-                    <iframe style="border-radius:12px" src="" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4vy1nKzIatI2lfvLIw3P0F?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
             `;
         }
