--- a/index.html
+++ b/index.html
@@ -475,28 +475,28 @@
     <div class="main-container">
         <nav class="sidebar">
             <div class="tab" data-tab="pending">
-                <span class="tab-text">Daily Affirmations💪🏼</span>
+                <span class="tab-text">daily affirmations</span>
             </div>
             <div class="tab" data-tab="mind">
-                <span class="tab-text">What's on your mind?😏</span>
+                <span class="tab-text">mostly interactive stuff, left upto you to choose</span>
             </div>
             <div class="tab" data-tab="luck">
-                <span class="tab-text">My Lady Luck 🎡</span>
+                <span class="tab-text">my lady luck</span>
             </div>
             <div class="tab" data-tab="playlist">
-                <span class="tab-text">Our Playlist 🎵</span>
+                <span class="tab-text">slow dance</span>
             </div>
             <div class="tab" data-tab="play">
-                <span class="tab-text">Some games for you🕹</span>
+                <span class="tab-text">games?</span>
             </div>
             <div class="tab" data-tab="drive">
-                <span class="tab-text">Do you wish to drive?😈</span>
+                <span class="tab-text">mango milkshakes.</span>
             </div>
             <div class="tab" data-tab="growth">
-                <span class="tab-text">Baby steps toward growth🌱</span>
+                <span class="tab-text">test the limits of your obedience, and grow</span>
             </div>
             <div class="tab locked" data-tab="vault">
-                <span class="tab-text">The Vault 🔒</span>
+                <span class="tab-text">the vault</span>
             </div>
         </nav>
         <main class="content-area" id="contentArea">
